appId: ${APP_ID}
tags:
  - settings
  - i18n
  - pull-request
---
- runFlow:
    file: ../utils/launch-app.yaml
    env:
      CLEAR_STATE: 'true'
      HOME_TEXT: vs Computer
- tapOn:
    text: Settings
- extendedWaitUntil:
    visible: Language
    timeout: 15000
- tapOn:
    text: Language
- extendedWaitUntil:
    visible: Español
    timeout: 15000
- tapOn:
    text: Español
- extendedWaitUntil:
    visible: Contra el ordenador
    timeout: 90000
- takeScreenshot: language-es-home
